# dreambbs

./: CMakeLists.txt  VERSION  dreambbs.mk
.github/workflows/: build.yml  update_branch_wiki.yml  update_gh_wiki.yml
include/: bbs_script.h  config.h  cppdef.h  dao.h  feat.h  global_def.h  modes.h  proto.h  struct.h  theme.h
lib/: dns.c  string.c
maple/: acct.c  bbsd.c  bbslua.c  board.c  cache.c  edit.c  gem.c  mail.c  menu.c  more.c  myfavorite.c  pfterm.c  pmore.c  popupmenu.c  post.c  socket.c  talk.c  visio.c  xchatd.c  xover.c
scripts/: checkACCT.sh  checkbrdDIR.sh  checkusrDIR.sh  clean.sh
so/: admin.c  bank.c  bbslua.c  chat.c  cleanrecommend.c  contact.c  list.c  mailgem.c  memorandum.c  newboard.c  observe.c  personal.c  pip.c  pipfun.c  pnote.c  shop.c  showvote.c  song.c  violate.c  vote.c
util/: account.c  acl-sort.c  camera.c  poststat.c  topusr.c  utmp-dump.c
